All_Component_DX/force-app/main/default/objects/Entitlement_History__c/Entitlement_History__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Object that stores complete entitlement history of cases/installed products.</description>
    <label>Service/Maintenance History</label>
    <nameField>
        <displayFormat>EHN-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service/Maintenance History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>