All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/Case_Line__c.field-meta.xml
<CustomField>
    <fullName>Case_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Case Line for which entitlement check was performed</description>
    <label>Case Line</label>
    <referenceTo>Case_Line__c</referenceTo>
    <relationshipLabel>Service/Maintenance History</relationshipLabel>
    <relationshipName>Service_Maintenance_History</relationshipName>
    <type>Lookup</type>
</CustomField>