All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/Covered_By__c.field-meta.xml
<CustomField>
    <fullName>Covered_By__c</fullName>
    <label>Covered By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>