All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/Days_To_Warranty_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Warranty_Expiry__c</fullName>
    <description>Number of days left in the warranty when this entitlement was made. Calculated automatically.</description>
    <formula>End_Date__c - Date_of_entitlement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days left in the warranty when this entitlement was made. Calculated automatically.</inlineHelpText>
    <label>Days To Warranty Expiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>