All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of service contract or warranty at the time of entitlement</description>
    <inlineHelpText>Warranty end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>