All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/Entitled_Within_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Entitled_Within_Threshold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitled Within Threshold</label>
    <type>Checkbox</type>
</CustomField>