All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/Entitlement_notes__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_notes__c</fullName>
    <description>Additional information entered in Case during customer entitlement</description>
    <inlineHelpText>Additional information entered in Case during customer entitlement</inlineHelpText>
    <label>Entitlement notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>