All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Date on which this entitlement record was inactivated to enable reentitlement</description>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>