All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/RMA_Line__c.field-meta.xml
<CustomField>
    <fullName>RMA_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the RMA Line for which entitlement check was performed</description>
    <label>RMA Line</label>
    <referenceTo>RMA_Shipment_Line__c</referenceTo>
    <relationshipLabel>Service/Maintenance History</relationshipLabel>
    <relationshipName>Service_Maintenance_History</relationshipName>
    <type>Lookup</type>
</CustomField>