All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service contract used in entitlement. Reference to service contract.</description>
    <inlineHelpText>Service contract used in entitlement. Reference to service contract.</inlineHelpText>
    <label>Service/Maintenance Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipLabel>Service/Maintenance History</relationshipLabel>
    <relationshipName>R00N70000001hzcQEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>