All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SLA_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service level the customer is entitled to by this entitlement event</description>
    <inlineHelpText>Service level the customer is entitled.</inlineHelpText>
    <label>SLA Terms</label>
    <referenceTo>Service_Level__c</referenceTo>
    <relationshipLabel>Service/Maintenance History</relationshipLabel>
    <relationshipName>Service_Maintenance_History</relationshipName>
    <type>Lookup</type>
</CustomField>