All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Warranty used in entitlement. Reference to warranty record</description>
    <inlineHelpText>Warranty used in entitlement. Reference to warranty record</inlineHelpText>
    <label>Product Warranty</label>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipLabel>Service/Maintenance History</relationshipLabel>
    <relationshipName>R00N70000001hzecEAA</relationshipName>
    <type>Lookup</type>
</CustomField>