All_Component_DX/force-app/main/default/objects/Entitlement_History__c/fields/Work_Detail__c.field-meta.xml
<CustomField>
    <fullName>Work_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Detail</label>
    <referenceTo>Service_Order_Line__c</referenceTo>
    <relationshipLabel>Entitlement History</relationshipLabel>
    <relationshipName>Service_Maintenance_History</relationshipName>
    <type>Lookup</type>
</CustomField>